--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Mi Primera Página</title>
+</head>
+<body>
+  <h1>¡Hola, mundo!</h1>
+  <p>Esta es mi primera página web publicada con GitHub Pages.</p>
+</body>
+</html>
 
