--- a/index.html
+++ b/index.html
@@ -2,11 +2,66 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Primera Página</title>
+  <title>Yesslie Correa</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fefefe;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #f48fb1;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    section {
+      padding: 20px;
+    }
+    h2 {
+      color: #d81b60;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+    }
+    footer {
+      background-color: #fce4ec;
+      text-align: center;
+      padding: 10px;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
-  <h1>¡Hola, mundo!</h1>
-  <p>Esta es mi primera página web publicada con GitHub Pages.</p>
+  <header>
+    <h1>¡Hola, soy Yesslie Correa!</h1>
+    <p>Estudiante de Negocios Internacionales en la UIDE</p>
+  </header>
+
+  <div class="container">
+    <section>
+      <h2>Sobre mí</h2>
+      <p>Me encanta el maquillaje y los animales. Disfruto aprender cosas nuevas y estoy comprometida con mi crecimiento profesional en el mundo de los negocios internacionales.</p>
+    </section>
+
+    <section>
+      <h2>Servicios</h2>
+      <p>Estoy en formación, pero en el futuro me gustaría ofrecer asesorías en comercio internacional, marketing global y emprendimiento femenino. ¡Estoy construyendo mi camino!</p>
+    </section>
+
+    <section>
+      <h2>Contacto</h2>
+      <p>Puedes escribirme a: <strong>yesslie.correa@example.com</strong></p>
+      <p>O seguirme en redes sociales (próximamente)</p>
+    </section>
+  </div>
+
+  <footer>
+    &copy; 2025 Yesslie Correa. Todos los derechos reservados.
+  </footer>
 </body>
 </html>
 
