--- a/index.html
+++ b/index.html
@@ -2,33 +2,37 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Yesslie Correa</title>
+  <title>Yesslie Beauty</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #fefefe;
+      font-family: 'Arial', sans-serif;
+      background-color: #fff0f5;
       color: #333;
       margin: 0;
       padding: 0;
     }
     header {
-      background-color: #f48fb1;
+      background-color: #e91e63;
       color: white;
-      padding: 20px;
+      padding: 30px 20px;
       text-align: center;
     }
-    section {
+    .container {
+      max-width: 900px;
+      margin: auto;
       padding: 20px;
     }
-    h2 {
-      color: #d81b60;
+    section {
+      margin-bottom: 30px;
     }
-    .container {
-      max-width: 800px;
-      margin: auto;
+    h2 {
+      color: #c2185b;
+    }
+    p {
+      line-height: 1.6;
     }
     footer {
-      background-color: #fce4ec;
+      background-color: #f8bbd0;
       text-align: center;
       padding: 10px;
       font-size: 0.9em;
@@ -36,32 +40,36 @@
   </style>
 </head>
 <body>
+
   <header>
-    <h1>¡Hola, soy Yesslie Correa!</h1>
-    <p>Estudiante de Negocios Internacionales en la UIDE</p>
+    <h1>Yesslie Beauty</h1>
+    <p>Maquillaje 100% original importado desde EE.UU.</p>
   </header>
 
   <div class="container">
     <section>
       <h2>Sobre mí</h2>
-      <p>Me encanta el maquillaje y los animales. Disfruto aprender cosas nuevas y estoy comprometida con mi crecimiento profesional en el mundo de los negocios internacionales.</p>
+      <p>Soy Yesslie Correa, estudiante de Negocios Internacionales en la UIDE. Amo el maquillaje y los animales. Combino mi pasión con mi carrera para ofrecer productos auténticos, de calidad y a buen precio.</p>
     </section>
 
     <section>
-      <h2>Servicios</h2>
-      <p>Estoy en formación, pero en el futuro me gustaría ofrecer asesorías en comercio internacional, marketing global y emprendimiento femenino. ¡Estoy construyendo mi camino!</p>
+      <h2>¿Qué ofrecemos?</h2>
+      <p>En <strong>Yesslie Beauty</strong> encontrarás productos de maquillaje 100% originales de marcas reconocidas importadas desde Estados Unidos: bases, labiales, sombras, brochas y más.</p>
+      <p>Todos nuestros productos son auténticos, con garantía de origen y entrega segura.</p>
     </section>
 
     <section>
       <h2>Contacto</h2>
-      <p>Puedes escribirme a: <strong>yesslie.correa@example.com</strong></p>
-      <p>O seguirme en redes sociales (próximamente)</p>
+      <p>¿Tienes preguntas o quieres hacer un pedido?</p>
+      <p>Escríbeme a: <strong>yesslie.beauty@example.com</strong></p>
+      <p>Pronto también podrás seguirnos en Instagram y TikTok.</p>
     </section>
   </div>
 
   <footer>
-    &copy; 2025 Yesslie Correa. Todos los derechos reservados.
+    &copy; 2025 Yesslie Beauty. Todos los derechos reservados.
   </footer>
+
 </body>
 </html>
 
