--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
     p {
       line-height: 1.6;
     }
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+    .whatsapp-btn {
+      display: inline-block;
+      background-color: #25d366;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: bold;
+      margin-top: 15px;
+    }
+    .whatsapp-btn:hover {
+      background-color: #1ebe5d;
+    }
     footer {
       background-color: #f8bbd0;
       text-align: center;
@@ -47,6 +66,9 @@
   </header>
 
   <div class="container">
+
+    <img src="https://i.imgur.com/YOUR_IMAGE.jpg" alt="Maquillaje original de EE.UU.">
+
     <section>
       <h2>Sobre mí</h2>
       <p>Soy Yesslie Correa, estudiante de Negocios Internacionales en la UIDE. Amo el maquillaje y los animales. Combino mi pasión con mi carrera para ofrecer productos auténticos, de calidad y a buen precio.</p>
@@ -61,8 +83,9 @@
     <section>
       <h2>Contacto</h2>
       <p>¿Tienes preguntas o quieres hacer un pedido?</p>
-      <p>Escríbeme a: <strong>yesslie.beauty@example.com</strong></p>
-      <p>Pronto también podrás seguirnos en Instagram y TikTok.</p>
+      <p>Escríbeme directamente por WhatsApp:</p>
+      <a class="whatsapp-btn" href="https://wa.me/593TU_NUMERO" target="_blank">📱 Enviar mensaje</a>
+      <p>O escríbeme a: <strong>yesslie.beauty@example.com</strong></p>
     </section>
   </div>
 
