--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="container">
 
-    <img src="https://i.imgur.com/YOUR_IMAGE.jpg" alt="Maquillaje original de EE.UU.">
+    <img src="IMAGENES/imagen.png" alt="Maquillaje original de EE.UU.">
 
     <section>
       <h2>Sobre mí</h2>
