--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
       padding: 30px 20px;
       text-align: center;
     }
+    nav {
+      background-color: #f8bbd0;
+      text-align: center;
+      padding: 10px;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #d81b60;
+      font-weight: bold;
+    }
     .container {
       max-width: 900px;
       margin: auto;
@@ -65,22 +76,18 @@
     <p>Maquillaje 100% original importado desde EE.UU.</p>
   </header>
 
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="sobre.html">Sobre mí</a>
+    <a href="ofrecemos.html">¿Qué ofrecemos?</a>
+    <a href="#contacto">Contacto</a>
+  </nav>
+
   <div class="container">
 
     <img src="IMAGENES/imagen.png" alt="Maquillaje original de EE.UU.">
 
-    <section>
-      <h2>Sobre mí</h2>
-      <p>Soy Yesslie Correa, estudiante de Negocios Internacionales en la UIDE. Amo el maquillaje y los animales. Combino mi pasión con mi carrera para ofrecer productos auténticos, de calidad y a buen precio.</p>
-    </section>
-
-    <section>
-      <h2>¿Qué ofrecemos?</h2>
-      <p>En <strong>Yesslie Beauty</strong> encontrarás productos de maquillaje 100% originales de marcas reconocidas importadas desde Estados Unidos: bases, labiales, sombras, brochas y más.</p>
-      <p>Todos nuestros productos son auténticos, con garantía de origen y entrega segura.</p>
-    </section>
-
-    <section>
+    <section id="contacto">
       <h2>Contacto</h2>
       <p>¿Tienes preguntas o quieres hacer un pedido?</p>
       <p>Escríbeme directamente por WhatsApp:</p>
