--- a/sobre.html
+++ b/sobre.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Sobre mí - Yesslie Beauty</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fff0f5;
+      color: #333;
+      padding: 20px;
+    }
+    h1 {
+      color: #e91e63;
+    }
+    a {
+      display: inline-block;
+      margin-top: 20px;
+      text-decoration: none;
+      color: #d81b60;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <h1>Sobre mí</h1>
+  <p>Soy Yesslie Correa, estudiante de Negocios Internacionales en la UIDE. Amo el maquillaje y los animales. Combino mi pasión con mi carrera para ofrecer productos auténticos, de calidad y a buen precio.</p>
+  <a href="index.html">⬅ Volver al inicio</a>
+</body>
+</html>
 
